style: add css card flip on hover functionality

--- a/index.html
+++ b/index.html
@@ -10,6 +10,71 @@
 </head>
 
 <body>
+  <div class="card-wrapper">
+    <div class="card">
+      <div class="card-front">
+      </div>
+      <div class="card-back">
+        🍩
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-front">
+      </div>
+      <div class="card-back">
+        🍰
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-front">
+      </div>
+      <div class="card-back">
+        🍩
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-front">
+      </div>
+      <div class="card-back">
+        🍰
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-front">
+      </div>
+      <div class="card-back">
+        🍭
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-front">
+      </div>
+      <div class="card-back">
+        🍭
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-front">
+      </div>
+      <div class="card-back">
+        🍦
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-front">
+      </div>
+      <div class="card-back">
+        🍦
+      </div>
+    </div>
+  </div>
 
   <script src="main.js"></script>
 </body>
