feat: display player moves

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 </head>
 
 <body>
+  <h3>Player Moves:
+    <span id="playerMoves"></span>
+  </h3>
+  <h3>Timer:
+    <span id="playerTimer"></span>
+  </h3>
   <div class="card-wrapper">
   </div>
 
