feat: begin adding timer logic

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <span id="playerMoves"></span>
   </h3>
   <h3>Timer:
-    <span id="playerTimer"></span>
+    <time>
+      <span id="playerMinutes">00</span> :
+      <span id="playerSeconds">00</span>
+    </time>
   </h3>
   <div class="card-wrapper">
   </div>
