feat: add star rating

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
   <h3>Player Moves:
     <span id="playerMoves"></span>
+    <span id="playerStars"></span>
   </h3>
   <h3>Timer:
     <time>
