feat: add restart btn & reset game functionality

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <span id="playerSeconds">00</span>
     </time>
   </h3>
+  <input id="restart-button" type="button" value="Restart">
   <div class="card-wrapper">
   </div>
 
