feat: add congrats popup and functionality

--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@
       <span id="playerSeconds">00</span>
     </time>
   </h3>
-  <input id="restart-button" type="button" value="Restart">
+  <input class="restart-button" type="button" value="Restart">
+  <div class="popup">
+    <h1>Congratulations!</h1>
+    <div class="display-popup-info">
+    </div>
+    <h3>Play again?</h3>
+    <input class="restart-button" type="button" value="Restart">
+  </div>
+
+
   <div class="card-wrapper">
   </div>
 
