--- a/index.html
+++ b/index.html
@@ -10,29 +10,33 @@
 </head>
 
 <body>
-  <h3>Player Moves:
-    <span id="playerMoves"></span>
-    <span id="playerStars"></span>
-  </h3>
-  <h3>Timer:
-    <time>
-      <span id="playerMinutes">00</span> :
-      <span id="playerSeconds">00</span>
-    </time>
-  </h3>
-  <input class="restart-button" type="button" value="Restart">
-  <div class="popup">
+  <header>
+    <h1>Dessert Memory Game</h1>
+    <div class="player-performance">
+      <p>Moves:
+        <span id="playerMoves"></span>
+      </p>
+      <p>Rating:
+        <span id="playerStars"></span>
+      </p>
+      <p>Timer:
+        <time>
+          <span id="playerMinutes">00</span> :
+          <span id="playerSeconds">00</span>
+        </time>
+      </p>
+      <input class="restart-button" type="button" value="Restart">
+    </div>
+  </header>
+  <section class="card-wrapper">
+  </section>
+  <section class="popup">
     <h1>Congratulations!</h1>
     <div class="display-popup-info">
     </div>
     <h3>Play again?</h3>
     <input class="restart-button" type="button" value="Restart">
-  </div>
-
-
-  <div class="card-wrapper">
-  </div>
-
+  </section>
   <script src="main.js"></script>
 </body>
 
