refactor: rename CSS classes and ids

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <h1>Dessert Memory Game</h1>
     <div class="player-performance">
       <p>Moves:
-        <span id="playerMoves"></span>
+        <span id="player-moves"></span>
       </p>
       <p>Rating:
-        <span id="playerStars"></span>
+        <span id="player-stars"></span>
       </p>
       <p>Timer:
         <time>
-          <span id="playerMinutes">00</span> :
-          <span id="playerSeconds">00</span>
+          <span id="player-minutes">00</span> :
+          <span id="player-seconds">00</span>
         </time>
       </p>
       <input class="restart-button" type="button" value="Restart">
