style: add media queries and styling to cards

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Memory Game</title>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -25,11 +26,11 @@
         </time>
       </div>
 
-      <div>Moves:
+      <div class="moves">Moves:
         <span id="player-moves"></span>
       </div>
 
-      <div>Rating:
+      <div class="rating">Rating:
         <span id="player-stars"></span>
       </div>
 
