feat: fine-tune card validation animation via js/css

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </section>
 
   <section class="popup">
-    <h1 class="title"> 🎉 Congratulations! 🎉</h1>
+    <h1 class="title"> 🎉 You Did It! 🎉</h1>
     <div class="display-popup-info">
     </div>
     <div class="display-popup-info">
