chore: add empty script tags in html for chrome bug

--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
   </div>
 
   <script src="main.js"></script>
+  <!-- Empty script tags stops CSS transition firing on page load for Chrome bug-->
+  <script> </script>
 </body>
 
 </html>
