fix: add another attempt to fix animation bug in chrome

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="styles.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="preload">
   <header>
     <div class="title">
       <h1>Memory Game</h1>
@@ -57,8 +57,6 @@
   </div>
 
   <script src="main.js"></script>
-  <!-- Empty script tags stops CSS transition firing on page load for Chrome bug-->
-  <script> </script>
 </body>
 
 </html>
